# openFightLoader

./: CMakeLists.txt
defaultUi/: readme.md
defaultUi/simple/: main_menu.ofui
src/: common.cpp  common.h  main.cpp  patternparser.cpp  patternparser.h  uidrawer.cpp  uidrawer.h  uiparser.cpp  uiparser.h  you.cpp  you.h
